tests/ui/feature-gates/feature-gate-diagnostic-on-missing-args.stderr
error: unexpected end of macro invocation
  --> $DIR/feature-gate-diagnostic-on-missing-args.rs:12:13
   |
LL | macro_rules! pair {
   | ----------------- when calling this macro
...
LL |     pair!(u8);
   |             ^ missing tokens in macro arguments
   |
note: while trying to match `,`
  --> $DIR/feature-gate-diagnostic-on-missing-args.rs:7:12
   |
LL |     ($ty:ty, $value:expr) => {};
   |            ^

error: aborting due to 1 previous error

